--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
                 <div class="listing-card">
                     <div class="listing-image-container">
-                        <img src="mumbai.jpg" alt="City Apartment" class="listing-image">
+                        <img src="Mumbai.jpg" alt="City Apartment" class="listing-image">
                         <div class="heart-icon">
                             <svg class="heart-svg" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                                 <path
@@ -369,5 +369,6 @@
     </footer>
 
 </body>
+
 
 </html>
